# car_qr

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  config.py  database-test.sqlite3-journal  docker-compose-prod.yml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yml  env.env  package.json  prepare_db.sh  project.env  pyproject.toml  restart_docker.sh  start_worker.sh  tailwind.config.js  webpack.config.js  wsgi.py
.github/workflows/: build-deploy.yml  pull-request.yml  stage-build-deploy-version.yml  stage-build-deploy.yml  test-workflow.yaml  test.yaml  test_workflow.yaml
app/: __init__.py
app/commands/: __init__.py
app/controllers/: __init__.py  car_options.py  date_convert.py  dealer_invantory.py  dealer_inventory.py  graphs.py  jinja_globals.py  notify_about_oil_change.py  notify_missing_payment.py  pagination.py  periodic_tasks.py  recaptcha.py  save_file.py  scheduler.py  stripe.py  subscriptions_expiration_check.py  user.py  utils.py  weekly_dealer_gift_box_invoices.py  weekly_inventory_report.py
app/forms/: __init__.py  auth.py  base.py  client.py  gift_box.py  gift_item.py  label.py  label_location.py  oil_change.py  picker.py  seller.py  service.py  user.py
app/models/: __init__.py  car_make.py  car_model.py  car_trim.py  car_type.py  client.py  dealer_gift_item.py  dealer_gift_item_replenishment.py  gift_box.py  gift_item.py  gifts_invoice.py  label.py  label_location.py  label_view.py  landing.py  oil_change.py  sale_report.py  serivce_record.py  sticker.py  stripe.py  subscription.py  user.py  user_logo.py  utils.py
app/pg-backup/: ReadMe.md
app/schema/: __init__.py  delear_inventory.py  gift_box.py  label.py  report.py  (+3 more)
src/: base.ts  countries.ts  custom.ts  gift_box_modal.ts  label.ts  label_generate.ts  landing.ts  logo_upload.ts  new_label.ts  password.ts  report.ts  styles.css  toast.ts  user.ts  users_search_result.ts
tests/: conftest.py  test_auth.py  test_buyer.py  test_byuer.py  test_controller.py  test_dealer_gift_items.py  test_dealer_invantory.py  test_gift_item.py  test_labels.py  test_location.py  test_notify.py  test_payment.py  test_picker.py  test_reports.py  test_sale_rep.py  test_seller.py  test_service.py  test_users.py  utils.py
(+260 files in other folders)
