[tool.poetry]
name = "car-qr-label"
version = "0.4.13"
description = ""
authors = ["Simple2B <simple2b.info@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
flask-migrate = "^4.0.4"
flask-wtf = "^1.1.1"
flask-mail = "^0.9.1"
flask-login = "^0.6.2"
python-dotenv = "^1.0.0"
click = "^8.1.3"
email-validator = "^2.2.0"
psycopg2-binary = "^2.9.5"
pydantic = "^2.8.2"
alchemical = "^0.7.1"
stripe = "^10.4.0"
pillow = "^10.0.0"
apscheduler = "^3.10.4"
pyecharts = "^2.0.4"
flask-pydantic = "^0.12.0"
pydantic-settings = "^2.3.4"
filetype = "^1.2.0"


[tool.poetry.group.dev.dependencies]
faker = "^18.3.1"
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"
mypy = "^1.5.1"
ruff = "^0.0.289"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
files = ["api/**/*.py", "app/**/*.py", "test_api/**/*.py", "test_flask/**/*.py"]
exclude = ["migrations/env.py", "migrations/version/*.py"]

[tool.ruff]
exclude = [
    "__pypackages__",
    "__pycache__",
    ".eggs",
    ".git",
    ".github",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
    "node_modules",
    "migrations",
]
line-length = 120
